# cat_charity_fund

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup_for_postman.py  test.db
alembic/: env.py
alembic/versions/: 2994aba14bc7_added_charity_project_and_donation_.py  6a4471f2902d_added_nullable_option_to_user_id_in_.py  9e34cd56cc60_initial.py  ced9dc678599_initial.py  da12901da3ab_created_models.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  auth.py  charity_projects.py  donation.py  user.py
app/core/: base.py  config.py  db.py  init_superuser.py  user.py
app/crud/: __init__.py  base.py  charity_project.py  donation.py  donations.py
app/models/: __init__.py  base_investment.py  charity_project.py  donation.py  user.py
app/schemas/: __init__.py  charity_project.py  donation.py  user.py
app/services/: __init__.py  charity_project_service.py  donation_service.py  investing.py
